--- a/css/main.css
+++ b/css/main.css
@@ -23,30 +23,30 @@
   width: 100%;
   margin: 0 auto;
 }
-#wrap .header .header-container {
+#wrap .header .header_container {
   max-width: 1920px;
   width: 100%;
   position: fixed;
 }
-#wrap .header .header-container .logo {
+#wrap .header .header_container .logo {
   position: absolute;
   left: 102px;
   top: 60px;
   width: 280px;
   height: 55px;
 }
-#wrap .header .header-container .logo .logo-btn img {
+#wrap .header .header_container .logo .logo_btn img {
   position: absolute;
   top: 0;
   left: 0;
 }
-#wrap .header .header-container .menu {
+#wrap .header .header_container nav .header_menu {
   position: absolute;
   top: 70px;
   right: 112px;
   line-height: 40px;
 }
-#wrap .header .header-container .menu li {
+#wrap .header .header_container nav .header_menu li {
   font-size: 1.5625rem;
   font-weight: 700;
   color: #000;
@@ -54,15 +54,15 @@
   font-style: normal;
   text-align: right;
 }
-#wrap .header .header-container .mobile-menu-btn {
+#wrap .header .header_container .mobile_menu_btn {
   display: none;
   position: absolute;
-  right: 10%;
-  top: 55px;
+  right: 9%;
+  top: 30px;
   width: 48px;
   height: 48px;
 }
-#wrap .header .header-container .mobile-menu-btn .mobile-menu {
+#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar {
   display: block;
   width: 22px;
   height: 17px;
@@ -71,7 +71,7 @@
   top: 0px;
   overflow: hidden;
 }
-#wrap .header .header-container .mobile-menu-btn .mobile-menu i {
+#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar i {
   position: absolute;
   left: 0;
   width: 100%;
@@ -80,13 +80,13 @@
   transition: all 0.3s;
   font-weight: 700;
 }
-#wrap .header .header-container .mobile-menu-btn .mobile-menu i:nth-child(1) {
+#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar i:nth-child(1) {
   top: 0;
 }
-#wrap .header .header-container .mobile-menu-btn .mobile-menu i:nth-child(2) {
+#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar i:nth-child(2) {
   bottom: 50%;
 }
-#wrap .header .header-container .mobile-menu-btn .mobile-menu i:nth-child(3) {
+#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar i:nth-child(3) {
   bottom: 0;
 }
 #wrap .section {
@@ -1004,17 +1004,17 @@
   line-height: 26px;
   color: #8a8888;
 }
-#wrap .top-btn .top-button {
+#wrap .top_btn .top_button {
   z-index: 5;
   position: fixed;
   right: 0;
   bottom: 0;
 }
-#wrap .top-btn .top-button .pc-image {
+#wrap .top_btn .top_button .pc_image {
   display: block;
   width: 74px;
   height: 74px;
 }
-#wrap .top-btn .top-button .mo-image {
+#wrap .top_btn .top_button .mo_image {
   display: none;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=main.css.map */
