--- a/css/index-pc/index-pc.css
+++ b/css/index-pc/index-pc.css
@@ -1017,4 +1017,4 @@
 }
 #wrap .top_btn .top_button .mo_image {
   display: none;
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=index-pc.css.map */
