--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,30 @@
+:root {
+    --black :#000000;
+    --white:#ffffff;
+	
+	--neutral-gray-50 : #f1f1f1;
+	--neutral-gray-100 : #d4d4d4;
+	--neutral-gray-200 : #bfbfbf;
+	--neutral-gray-300 : #a1a1a1;
+	--neutral-gray-400 : #8f8f8f;
+	--neutral-gray-500 : #737373;
+	--neutral-gray-600 : #696969;
+	--neutral-gray-700 : #525252;
+	--neutral-gray-800 : #3f3f3f;
+	--neutral-gray-900 : #303030;
+	--primary-brown-Light : #fbf7f2;
+	--primary-brown-LightHover : #faf3eb;
+	--primary-brown-LightActive : #f4e7d6;
+	--primary-brown-Normal : #dbb27a;
+	--primary-brown-NormalHover : #c5a06e;
+	--primary-brown-NormalActive : #af8e62;
+	--primary-brown-Dark : #a4865c;
+	--primary-brown-DarkHover : #836b49;
+	--primary-brown-DarkActive : #635037;
+	--primary-brown-DarkActive : #4d3e2b;
+}
+
+
 * {margin: 0;padding: 0;vertical-align:middle;font-size: 100%;box-sizing: border-box;font-size-adjust:100%;}
 html,body {width: 100%;height: 100%;}
 html {overflow-y: scroll;/* scroll-behavior: smooth; */}
@@ -43,10 +70,12 @@ time, mark, audio, video {
 
 }
 /* HTML5 display-role reset for older browsers */
+
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
@@ -64,193 +93,4 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
-
-:root {
-	--neutral-gray-50 : #f1f1f1 , rgb(241, 241, 241);
-	--neutral-gray-100 : #d4d4d4 , rgb(212, 212, 212);
-	--neutral-gray-200 : #bfbfbf , rgb(191, 191, 191);
-	--neutral-gray-300 : #a1a1a1 , rgb(161, 161, 161);
-	--neutral-gray-400 : #8f8f8f , rgb(143, 143, 143);
-	--neutral-gray-500 : #737373 , rgb(115, 115, 115);
-	--neutral-gray-600 : #696969 , rgb(105, 105, 105);
-	--neutral-gray-700 : #525252 , rgb(82, 82, 82);
-	--neutral-gray-800 : #3f3f3f , rgb(63, 63, 63);
-	--neutral-gray-900 : #303030 , rgb(48, 48, 48);
-
-	--primary-brown-Light : #fbf7f2 , rgb(251, 247, 242);
-	--primary-brown-LightHover : #faf3eb , rgb(250, 243, 235);
-	--primary-brown-LightActive : #f4e7d6 , rgb(244, 231, 214);
-	--primary-brown-Normal : #dbb27a , rgb(219, 178, 122);
-	--primary-brown-NormalHover : #c5a06e , rgb(197, 160, 110);
-	--primary-brown-NormalActive : #af8e62 , rgb(175, 142, 98);
-	--primary-brown-Dark : #a4865c , rgb(164, 134, 92);
-	--primary-brown-DarkHover : #836b49 , rgb(131, 107, 73);
-	--primary-brown-DarkActive : #635037 , rgb(99, 80, 55);
-	--primary-brown-DarkActive : #4d3e2b , rgb(77, 62, 43);
-}
-
-
-/* 헤더 */
-.pc-only {
-    display:none;
-}
-.mobile-only {
-    display:block;
-}  
-
-header {
-    position:fixed;
-    top:0;
-    width: 100%;
-    height:60px;
-    background-color: rgba(0, 0, 0, 0.3);
-    /* background-color:black; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding:0 8.07% 0 4.80%;
-}
-
-header > nav > button {
-    background-color: transparent;
-    border: none;
-}
-
-footer {
-    padding:0 9.87% 101px 5.60%;
-}
-
-.footer h4 {
-    font-family: Outfit;
-    font-size: 1.125rem;
-    font-weight: 600;
-    line-height: 23px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin-bottom: 16px;
-} 
-
-.footer__title {
-    margin-bottom: 23.44px;
-}
-.footer__title img {
-    width: 68.53%;
-}
-
-.footer__address_wrap {
-    margin-bottom: 33px;
-}
-
-.footer__mail_wrap {
-    margin-bottom: 40px;
-}
-
-.footer__address_wrap address, 
-.footer__mail_wrap a {
-    font-family: SUIT;
-    font-size: 0.875rem;
-    font-weight: 300;
-    line-height: 18px;
-    letter-spacing: -0.05em;
-    text-align: left;
-    color: var(--white);
-}
-
-#footer__phone {
-    font-family: Outfit;
-    font-size: 1.875rem;
-    font-weight: 700;
-    line-height: 30px;
-    letter-spacing: 0em;
-    text-align: right;
-    color:var(--white);
-}
-.footer__copyright {
-    font-family: SUIT;
-    font-size: 1.250rem;
-    font-weight: 300;
-    line-height: 30px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin-top: 40px; 
-    color:rgba(255, 255, 255, 0.5) ;
-}
-@media (min-width:380px) {
-    .mobile-spacing {
-        display: none;
-    }
-}
-@media (min-width:1920px) {
-    .mobile-only {
-        display: none;
-    }
-    .pc-only {
-        display:block;
-    }
-    .pc-flex {
-        display: flex;
-    }
-    header {
-        background-color: transparent;
-        align-items:flex-start;
-        padding: 85px 5.31% 0 5.31%;
-        height:auto;
-    }
-    header > h1 > img {
-        width: 279px;
-    }
-    
-    .header__top-menu {
-        margin-top: 16px;
-        text-align: right;
-        width: 103px;
-        height: 147px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-    .header__top-menu li a {
-        font-family: Outfit;
-        font-size: 1.563rem;
-        font-weight: 700;
-        line-height: 32px;
-        letter-spacing: 0em;
-        color: var(--white);
-    }
-    footer {
-        padding:0 102px 128px 102px;
-        border-top:1px solid var(--white);
-        padding-top:105px;
-    }
-    .footer h4 {
-        font-size:1.875rem;
-        line-height: 37.8px;
-        color: red;
-    }
-    .footer__title img {
-        width: 418.5px;
-    }
-    .footer__address_wrap {
-        margin-bottom: 62px;
-        margin-right: 71px;
-    }
-    .footer__mail_wrap {
-        margin-bottom: 0;
-    }
-
-    .footer__address_wrap address, 
-    .footer__mail_wrap a {
-        display: block;
-        font-size: 1.250rem;
-        line-height: 30px;
-        margin-top: 20px;
-    }
-    #footer__phone {
-        font-size: 3.125rem;
-        line-height: 50px;
-    }
-    .footer__copyright {
-        margin-top: 76px;
-    }
 }
