--- a/css/index-pc/index-pc.css
+++ b/css/index-pc/index-pc.css
@@ -1,5 +1,5 @@
-@import url("/css/fonts.css");
-@import url("/css/reset.css");
+@import url("../fonts.css");
+@import url("../reset.css");
 * {
   box-sizing: border-box;
   -webkit-user-select: none;
@@ -46,10 +46,10 @@
   right: 112px;
   line-height: 40px;
 }
-#wrap .header .header_container nav .header_menu li {
+#wrap .header .header_container nav .header_menu li a {
   font-size: 1.5625rem;
   font-weight: 700;
-  color: #000;
+  color: black;
   font-family: "Outfit";
   font-style: normal;
   text-align: right;
@@ -76,7 +76,7 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #000;
+  background-color: black;
   transition: all 0.3s;
   font-weight: 700;
 }
@@ -127,7 +127,7 @@
   height: 310px;
   display: flex;
   text-align: center;
-  color: #000;
+  color: black;
   animation: slide1 2s ease-in-out forwards;
 }
 #wrap .section1 .sec1_container .sec1_content .slide_text1 .we {
@@ -169,7 +169,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  color: #000;
+  color: black;
   font-style: italic;
   font-family: "Cormorant Garamond";
   font-size: 9rem;
@@ -227,7 +227,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  color: #000;
+  color: black;
   text-decoration: underline;
   text-decoration-thickness: 0;
   text-underline-position: under;
@@ -284,7 +284,7 @@
   left: calc(50% - 609.5px + 135px);
   width: 950px;
   height: 150px;
-  color: #000;
+  color: black;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -346,7 +346,7 @@
   font-weight: 300;
   font-size: 10.625rem;
   line-height: 242px;
-  color: #000;
+  color: black;
   letter-spacing: -0.5rem;
 }
 #wrap .section3 .sec3_container .sec3_content .sec3_gap {
@@ -405,7 +405,7 @@
   font-style: italic;
   font-weight: 300;
   font-size: 10.625rem;
-  color: #000;
+  color: black;
   letter-spacing: -0.5rem;
 }
 #wrap .section4 .sec4_container .sec4_content {
@@ -424,7 +424,7 @@
   font-weight: 300;
   font-size: 10.625rem;
   line-height: 242px;
-  color: #000;
+  color: black;
   letter-spacing: -0.5rem;
 }
 #wrap .section4 .sec4_container .sec4_content .sec4_gap {
@@ -456,7 +456,7 @@
   font-weight: 500;
   font-size: 2.8125rem;
   line-height: 62px;
-  color: #000;
+  color: black;
 }
 #wrap .section4 .sec4_container .sec4_content .sec4_gap .sec4_text2 .right {
   position: absolute;
@@ -468,7 +468,7 @@
   font-weight: 300;
   font-size: 1.125rem;
   line-height: 30px;
-  color: #000;
+  color: black;
 }
 #wrap .section4 .sec4_container .sec4_content .sec4_gap .sec4_text2 .sec4_brace2 {
   position: absolute;
@@ -483,7 +483,7 @@
   font-style: italic;
   font-weight: 300;
   font-size: 10.625rem;
-  color: #000;
+  color: black;
   letter-spacing: -0.5rem;
 }
 #wrap .section5 .sec5_container .background_img1 {
@@ -558,7 +558,7 @@
   right: 0;
   font-size: 11.875rem;
   line-height: 260px;
-  color: #000;
+  color: black;
   letter-spacing: -0.3rem;
 }
 #wrap .section5 .sec5_container .sec5_gap .text1 h4 {
@@ -577,7 +577,7 @@
   bottom: 0;
   font-family: "SUIT";
   font-style: normal;
-  color: #000;
+  color: black;
 }
 #wrap .section5 .sec5_container .sec5_gap .text2 h5 {
   padding-bottom: 30px;
@@ -605,7 +605,7 @@
   font-style: italic;
   font-weight: 300;
   font-size: 11.25rem;
-  color: #000;
+  color: black;
   justify-items: center;
   align-items: center;
   letter-spacing: -0.3rem;
@@ -649,7 +649,7 @@
   font-style: italic;
   font-weight: 300;
   font-size: 11.25rem;
-  color: #000;
+  color: black;
   letter-spacing: -0.3rem;
 }
 #wrap .section7 .sec7_container .sec7_content {
@@ -668,7 +668,7 @@
   font-weight: 300;
   font-size: 11.25rem;
   letter-spacing: -0.3rem;
-  color: #000;
+  color: black;
 }
 #wrap .section7 .sec7_container .sec7_content .sec7_gap {
   position: absolute;
@@ -697,7 +697,7 @@
   font-size: 2rem;
   line-height: 130%;
   text-align: center;
-  color: #000;
+  color: black;
 }
 #wrap .section7 .sec7_container .sec7_content .sec7_gap .mo_sec7_text {
   display: none;
@@ -717,7 +717,7 @@
   font-size: 8.125rem;
   line-height: 182px;
   letter-spacing: -0.3rem;
-  color: #000;
+  color: black;
 }
 #wrap .section7 .sec7_container .sec7_content .object {
   opacity: 0;
@@ -747,7 +747,7 @@
   left: calc(50% - 315px);
   width: 630px;
   height: 246px;
-  color: #000;
+  color: black;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -805,7 +805,7 @@
   left: calc(50% - 315px);
   width: 630px;
   height: 210px;
-  color: #000;
+  color: black;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -839,7 +839,7 @@
   left: calc(50% - 355px);
   width: 730px;
   height: 350px;
-  color: #000;
+  color: black;
 }
 #wrap .section10 .sec10_container .sec10_content h3 {
   position: absolute;
@@ -871,7 +871,7 @@
 }
 #wrap .section11 .sec11_container .sec11_content .sec11_text {
   position: relative;
-  color: #000;
+  color: black;
   font-family: "SUIT";
   font-style: normal;
   font-weight: 600;
@@ -915,9 +915,9 @@
   padding-top: 5px;
 }
 #wrap .section12 {
-  background-color: #000;
+  background-color: black;
 }
-#wrap .section12 .sec12_container .backgrond_img img {
+#wrap .section12 .sec12_container .background_img img {
   position: absolute;
   top: -400px;
   left: 60%;
@@ -951,7 +951,7 @@
   left: calc(50% - 400px - 460px);
 }
 #wrap .section12 .sec12_container .sec12_content .middle {
-  color: #fff;
+  color: white;
   font-family: "Outfit";
   font-style: normal;
 }
@@ -964,7 +964,7 @@
   line-height: 74px;
 }
 #wrap .section12 .sec12_container .sec12_content .bottom {
-  color: #fff;
+  color: white;
   font-family: "Outfit";
   font-style: normal;
   padding-top: 50px;
