--- a/css/menu/menu.css
+++ b/css/menu/menu.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
-@import url("/css/fonts.css");
-@import url("/css/reset.css");
+@import url("../fonts.css");
+@import url("../reset.css");
 * {
   box-sizing: border-box;
   -webkit-user-select: none;
@@ -43,7 +43,7 @@
   }
   #mobile_wrap .section .mobile_menu nav .mobile_menu_list {
     position: absolute;
-    top: 240px;
+    top: 27%;
     left: calc(50% - 51.5px);
     width: 105px;
     height: 190px;
