--- a/css/menu/menu.scss
+++ b/css/menu/menu.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
-@import url('/css/fonts.css');
-@import url('/css/reset.css');
+@import url('../fonts.css');
+@import url('../reset.css');
 
 * {
   box-sizing: border-box;
@@ -42,11 +42,11 @@
         nav {
           .mobile_menu_list {
             position: absolute;
-            top: 240px;
+            // top: 200px;
+            top: 27%;
             left: calc(50% - 103px/2);
             width: 105px;
             height: 190px;
-            // line-height: 31.5px;
             li {
               font-size: 1.5625rem;   //25px
               font-weight: 700;
